gate matrics alignment, tabular report pagination and dropdown fix, visitor matrix column shift and date format correction

--- a/src/app/component/map/map.component.css
+++ b/src/app/component/map/map.component.css
@@ -65,7 +65,7 @@ button.close {
     float: unset;
     top: 31%;
     left: 25%;
-    z-index: 99999;
+    z-index: 1000;
 }
 #tbl-expand
 {
@@ -249,6 +249,7 @@ button.close {
     display: block;
     margin-left: 4%;
     width: 96%;
+    border-radius: 12px;
     height: auto;
     background-color: #343542;
     z-index: 1002;
